analysis/spring-framework/step_1/logs/4086-38f3d12.log
Exception in thread "DisconnectableInputStream source reader" org.gradle.api.UncheckedIOException: java.io.IOException: Bad file descriptor
	at org.gradle.internal.UncheckedException.throwAsUncheckedException(UncheckedException.java:43)
	at org.gradle.util.DisconnectableInputStream$1.run(DisconnectableInputStream.java:125)
	at java.lang.Thread.run(Thread.java:748)
Caused by: java.io.IOException: Bad file descriptor
	at java.io.FileInputStream.readBytes(Native Method)
	at java.io.FileInputStream.read(FileInputStream.java:255)
	at java.io.BufferedInputStream.fill(BufferedInputStream.java:246)
	at java.io.BufferedInputStream.read1(BufferedInputStream.java:286)
	at java.io.BufferedInputStream.read(BufferedInputStream.java:345)
	at org.gradle.util.DisconnectableInputStream$1.run(DisconnectableInputStream.java:96)
	... 1 more
:buildSrc:compileJava UP-TO-DATE
:buildSrc:compileGroovy
:buildSrc:processResources
:buildSrc:classes
:buildSrc:jar
:buildSrc:assemble
:buildSrc:compileTestJava UP-TO-DATE
:buildSrc:compileTestGroovy UP-TO-DATE
:buildSrc:processTestResources UP-TO-DATE
:buildSrc:testClasses UP-TO-DATE
:buildSrc:test UP-TO-DATE
:buildSrc:check UP-TO-DATE
:buildSrc:build
:assemble
:build
:spring-core:cglibRepackJar
:spring-core:objenesisRepackJar
:spring-core:compileJava
:spring-core:processResources UP-TO-DATE
:spring-core:classes
:spring-core:jar
:spring-beans:compileJava
:spring-beans:processResources
:spring-beans:classes
:spring-beans-groovy:compileJava SKIPPED
:spring-beans-groovy:compileGroovy
:spring-beans-groovy:processResources UP-TO-DATE
:spring-beans-groovy:classes
:spring-beans:jar
:spring-aop:compileJava
:spring-aop:processResources
:spring-aop:classes
:spring-aop:jar
:spring-aop:sourcesJar
:spring-aop:assemble
:spring-aop:build
:spring-expression:compileJava
:spring-expression:processResources
:spring-expression:classes
:spring-expression:jar
:spring-instrument:compileJava
:spring-instrument:processResources UP-TO-DATE
:spring-instrument:classes
:spring-instrument:jar
:spring-context:compileJava
:spring-context:compileGroovy UP-TO-DATE
:spring-context:processResources
:spring-context:classes
:spring-context:jar
:spring-tx:compileJava
:spring-tx:processResources
:spring-tx:classes
:spring-tx:jar
:spring-jdbc:compileJava
:spring-jdbc:processResources
:spring-jdbc:classes
:spring-jdbc:jar
:spring-context-support:compileJava
:spring-context-support:processResources
:spring-context-support:classes
:spring-context-support:jar
:spring-oxm:compileJava
:spring-oxm:processResources
:spring-oxm:classes
:spring-oxm:jar
:spring-web:compileJava/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/codec/AbstractServerHttpMessageReader.java:48: error: method does not override or implement a method from a supertype
	@Override
	^
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/codec/AbstractServerHttpMessageReader.java:50: error: method canRead in interface HttpMessageReader<T> cannot be applied to given types;
		return this.reader.canRead(elementType, mediaType, hints);
		                  ^
  required: ResolvableType,MediaType
  found: ResolvableType,MediaType,Map<String,Object>
  reason: actual and formal argument lists differ in length
  where T is a type-variable:
    T extends Object declared in interface HttpMessageReader
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/codec/Jackson2ServerHttpMessageReader.java:40: error: Jackson2ServerHttpMessageReader is not abstract and does not override abstract method canRead(ResolvableType,MediaType) in HttpMessageReader
public class Jackson2ServerHttpMessageReader extends AbstractServerHttpMessageReader<Object> {
       ^
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/codec/AbstractServerHttpMessageWriter.java:48: error: method does not override or implement a method from a supertype
	@Override
	^
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/codec/AbstractServerHttpMessageWriter.java:50: error: method canWrite in interface HttpMessageWriter<T> cannot be applied to given types;
		return this.writer.canWrite(elementType, mediaType, hints);
		                  ^
  required: ResolvableType,MediaType
  found: ResolvableType,MediaType,Map<String,Object>
  reason: actual and formal argument lists differ in length
  where T is a type-variable:
    T extends Object declared in interface HttpMessageWriter
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/codec/Jackson2ServerHttpMessageWriter.java:40: error: Jackson2ServerHttpMessageWriter is not abstract and does not override abstract method canWrite(ResolvableType,MediaType) in HttpMessageWriter
public class Jackson2ServerHttpMessageWriter extends AbstractServerHttpMessageWriter<Object> {
       ^
6 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-web:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 17.59 secs
